okd-services/services/grafana/manifests/04-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: grafana
  namespace: grafana
  labels:
    app.kubernetes.io/name: grafana
spec:
  host: grafana.apps.okd.cgraaaj.in
  to:
    kind: Service
    name: grafana
    weight: 100
  port:
    targetPort: service
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
